[package]
name = "mcu-driver-dht"
version = "0.0.1"
authors = ["Sergey Vakhurin <igelbox@gmail.com>"]
description = "A platform agnostic driver to interface the DHT22 (temperature and humidity sensor)"
keywords = ["embedded", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
repository = "https://github.com/igelbox/mcu-driver-dht"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"
